--- a/SET3-Frontend/src/Meni/pages/LoginPage/Login.css
+++ b/SET3-Frontend/src/Meni/pages/LoginPage/Login.css
@@ -3,7 +3,10 @@
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: #D8E0E8;
+}
+
+.forgotpwd {
+    margin-left: 15px;
 }
 
 h1 {
