--- a/SET3-Frontend/src/AccessRights/AccessRights.css
+++ b/SET3-Frontend/src/AccessRights/AccessRights.css
@@ -1,45 +1,32 @@
 .App {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 table {
-    font-style: oblique;
-    border-collapse: collapse;
-    width: 50%;
-    margin-right: 25%;
-    margin-left: 25%;
-    margin-top:15%;
+  border: 2px solid forestgreen;
+  width: 400px;
 }
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+th {
+  border-bottom: 1px solid black;
 }
 
-tr:nth-child(even) {
-    background-color: #dddddd;
+td {
+  text-align: center;
 }
 
-#spremi {
-    background: #8994A4;
-    color: #fff;
-    position: absolute;
-    left: 80%;
-    top: 80%;
-    font-size: 13px;
-    text-align: center;
-    padding: 10px 30px;
-    border-radius: 8px;
-    font-style: oblique;
+#spremi{
+  background-color: #00FFFF;
+  position: absolute;
+  left: 450px;
+  top: 110px;
 }
 
 .Naslov {
-    position: absolute;
-    font-style: oblique;
-    top: 15%;
+  position: absolute;
+  top: 20px;
 }
