--- a/SET3-Frontend/src/AccessRights/AccessRights.css
+++ b/SET3-Frontend/src/AccessRights/AccessRights.css
@@ -1,32 +1,43 @@
 .App {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 table {
-  border: 2px solid forestgreen;
-  width: 400px;
+    font-style: oblique;
+    border-collapse: collapse;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+    margin-top: 15%;
+}
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
 
-th {
-  border-bottom: 1px solid black;
-}
-
-td {
-  text-align: center;
-}
-
-#spremi{
-  background-color: #00FFFF;
-  position: absolute;
-  left: 450px;
-  top: 110px;
+#spremi {
+    background: #8994A4;
+    color: #fff;
+    position: absolute;
+    left: 80%;
+    top: 80%;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px 30px;
+    border-radius: 8px;
+    font-style: oblique;
 }
 
 .Naslov {
-  position: absolute;
-  top: 20px;
+    position: absolute;
+    font-style: oblique;
+    top: 15%;
 }
