--- a/SET3-Frontend/src/AccessRights/AccessRights.css
+++ b/SET3-Frontend/src/AccessRights/AccessRights.css
@@ -1,9 +1,10 @@
 .App {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin: auto;
+}
+h1{
+    text-align:center;
 }
 
 table {
@@ -35,9 +36,10 @@ tr:nth-child(even) {
     border-radius: 8px;
     font-style: oblique;
 }
+#spremi:hover{
+    cursor:pointer;
+}
 
 .Naslov {
-    position: absolute;
-    font-style: oblique;
-    top: 15%;
+    margin: auto;
 }
