--- a/SET3-Frontend/src/Meni/pages/styleForm.css
+++ b/SET3-Frontend/src/Meni/pages/styleForm.css
@@ -106,6 +106,17 @@ p {
     color: gray;
 }
 
+#role {
+    width: 100%;
+    padding: 5px 8px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid #353535;
+    color: white;
+    background-color: #0d6efd;
+    width: 100%;
+}
+
 #pitanja {
     width: 100%;
     padding: 5px 8px;
