--- a/SET3-Frontend/src/Meni/pages/AllDeliveriesPage/DeliveriesStyle.css
+++ b/SET3-Frontend/src/Meni/pages/AllDeliveriesPage/DeliveriesStyle.css
@@ -6,3 +6,10 @@ table {
     margin-left: 3%;
     margin-top: 5%;
 }
+.table{
+    width:95%;
+}
+.card {
+    border-radius: 2rem;
+    justify-content: center;
+}
