--- a/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
+++ b/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
@@ -117,7 +117,6 @@
     color: #808080;
     font-weight: normal;
     font-style: normal;
-
 }
 
 .orderTable td:nth-child(6) {
@@ -159,7 +158,23 @@
     margin-bottom: 2px;
 } 
 
-.paging {
-    margin-top: 0.5rem;
+.pagination {
+    margin-top: 0.7rem;
     align-self: end;
+}
+
+.pagination button {
+    border: 1px solid #36304a;
+    border-radius: 5px;
+    width: 100px; 
+    background-color: white;
+    color: #808080;
+}
+
+.pagination button:nth-of-type(1) {
+    margin-right: 0.4rem;
+}
+
+.pagination button:disabled, button[disabled] {
+    background-color: #f5f5f5;
 }
