--- a/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
+++ b/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
@@ -42,6 +42,8 @@
     border-bottom: 1px gray solid;
 }
 
+
+
 #insideHiddenFilterDiv {
     display: flex;
     align-items: center;
@@ -60,11 +62,18 @@
     background-color: white;
     color: #808080;
 }
+
+    #insideHiddenFilterDiv2 button:hover {
+        background-color: #36304a;
+        color: #fff;
+    }
+
 #insideHiddenFilterDiv2 button:nth-of-type(1) {
     margin-right: 0.4rem;
 }
 
-#hiddenFilterDiv div {
+
+#insideHiddenFilterDiv div {
     margin-right: 1.5rem;
 }
 
@@ -87,10 +96,6 @@
 #hiddenFilterDiv select {
     padding: 0.4rem;
     padding-right: 1rem;
-}
-
-#insideHiddenFilterDiv2 input[type=number] {
-    width: 15%;
 }
 
 
@@ -225,3 +230,30 @@
         .pagination button:disabled, button[disabled] {
             background-color: #f5f5f5;
         }
+
+        .pagination button:hover:enabled {
+            background-color: #36304a;
+            color: #fff;
+        }
+
+
+@media(max-width:1600px) {
+    #insideHiddenFilterDiv {
+        flex-direction: column;
+        align-items: start;
+    }
+        #insideHiddenFilterDiv div {
+            flex-direction: column;
+            align-items: start;
+            margin-bottom: 0.5rem
+        }
+
+    .temp {
+        flex-direction: row;
+    }
+
+    #insideHiddenFilterDiv2 {
+        margin-top: 0;
+    }
+}
+        
