--- a/SET3-Frontend/src/Meni/pages/LoginPage/Login.css
+++ b/SET3-Frontend/src/Meni/pages/LoginPage/Login.css
@@ -10,8 +10,7 @@
 }
 
 h1 {
-    font-style: oblique;
-    color: #061C35;
+    color: white;
     text-align: center;
     margin: 0 auto;
     margin-top: 50px;
