Generisanje pdfa part  1

--- a/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
+++ b/SET3-Frontend/src/Meni/pages/OrderPage/OrdersStyle.css
@@ -4,7 +4,9 @@
     margin: auto;
     width: 100%;
 }
-
+form{
+    padding: 0px;
+}
     .mainDiv button {
         background-color: transparent;
     }
